fixed the grid displaying repo with overflow-wrap css property

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -72,6 +72,7 @@
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
+  overflow-wrap: break-word;
 }
 
 .card {
